<resources>
    <string name="app_name">HealthIconIQ</string>
    <string name="gallery"> Gallery </string>
    <string name="camera"> Camera </string>
    <string name="healthiconiq">HealthIconIQ</string>
    <string name="describe">Describe</string>
    <string name="speak">Speak</string>
    <string name="back_to_home">Back to Home</string>
    <string name="enter_api_key">Enter API Key</string>
    <string name="save">Save</string>
    <string name="theme_switch">Light</string>
</resources>