<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".SettingsActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <EditText
        android:id="@+id/etApiKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_api_key"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnSaveApiKey"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_switch"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

</LinearLayout>
