<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthiconiq"
        android:textSize="32sp"
        android:textColor="#00796B"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintVertical_bias="0.1"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/tvHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginTop="100dp"
        android:elevation="4dp"/>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/btnCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_bias="0.1"
        android:elevation="4dp"/>

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/language_options"
        android:background="@drawable/spinner_background"
        android:popupBackground="#00796B"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btnGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0.1"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnDescribe"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/describe"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_bias="0.1"
        android:visibility="invisible"
        android:elevation="4dp"/>

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_background"
            android:src="@drawable/baseline_settings_24"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintHorizontal_bias="0.95"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:padding="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>